name:                haskell99
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              proudzhu
maintainer:          proudzhu.fdu@gmail.com
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Haskell99
  build-depends:       base >=4.8 && <4.9
  ghc-options:         -Wall
  hs-source-dirs:	   src
  default-language:    Haskell2010

test-suite doctests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            doctest-driver.hs
  build-depends:      base >4 && <5, doctest, doctest-discover
  HS-Source-Dirs:     test
